# ui-bridge

./: .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
.pre-commit-hooks/: block-claude-attribution.sh
assets/css/: styles.cd5b488e.css
assets/js/: 00986521.240f5a37.js  01c00c41.e6e37808.js  0214b3ed.b3084fe1.js  0d73461d.7717cdd9.js  0e384e19.f8dc8a29.js  17896441.96783c7a.js  1df93b7f.c102dba4.js  2193fa99.0467be36.js  2237.12b4afea.js  2b5a7889.e6edbf70.js  2c6e8057.4d2787eb.js  39c18b32.9f1256a9.js  3bf713e4.9020d1f5.js  3fde744a.4a555764.js  493b5cb3.7ab9278e.js  4dbf4882.3603d8eb.js  5234f5bc.cc31fcfd.js  53d800a0.7eb7bfa6.js  5e95c892.efc07ba6.js  6193b7a1.86d4e490.js  65df3d35.0a3ca978.js  67cafc72.af1757de.js  6b6b2520.600f2cc3.js  6cc5f272.874b5f23.js  6d091825.dad05663.js  72134cb0.a96e6f35.js  745d5cd7.5f7755c6.js  7603b3e8.50f5773c.js  77656ed5.4fadaaf1.js  7d538ce7.36d29551.js  7fb315c8.e3a7f06b.js  814a372f.7df4ddcc.js  (+28 more)
docs/: awas-comparison.md  index.html
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
e2e/: ai-native-ui-bridge.e2e.ts  babel-plugin-integration.e2e.ts  package.json  setup.ts  tsconfig.json  vitest.config.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: main.rs
(+118 files in other folders)
